<resources>
    <string name="app_name">Phraze</string>
    <string name="save_button_text">S A V E</string>
    <string name="add_phrase_button_text">ADD PHRASE</string>
    <string name="show_phrases_button_text">SHOW PHRASES</string>
    <string name="recently_added_phrase_card_title">RECENTLY ADDED PHRASE</string>
    <string name="enter_a_phrase_to_save_edittext_hint">Enter a phrase to save</string>
    <string name="show_recent_button_title">SHOW RECENTLY ADDED</string>
    <string name="edit_phrases_button_text">EDIT PHRASES</string>
    <string name="language_subscription_button_text">LANGUAGE SUBSCRIPTION</string>
    <string name="translate_button_text">TRANSLATE</string>
    <string name="language_subscription_update_button_text">UPDATE</string>
</resources>
