<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:padding="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/phraze_logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_spacing"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/add_phrase_activity_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view_height"
            android:layout_marginTop="@dimen/default_layout_spacing"
            android:background="@drawable/button_style"
            android:text="@string/add_phrase_button_text"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/show_phrases_activity_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view_height"
            android:layout_marginTop="@dimen/default_layout_spacing"
            android:background="@drawable/button_style"
            android:text="@string/show_phrases_button_text"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/edit_phrases_activity_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view_height"
            android:layout_marginTop="@dimen/default_layout_spacing"
            android:background="@drawable/button_style"
            android:text="@string/edit_phrases_button_text"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/language_subscription_activity_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view_height"
            android:layout_marginTop="@dimen/default_layout_spacing"
            android:background="@drawable/button_style"
            android:text="@string/language_subscription_button_text"
            android:textColor="@color/yellow"/>

        <Button
            android:id="@+id/translate_activity_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view_height"
            android:layout_marginTop="@dimen/default_layout_spacing"
            android:background="@drawable/button_style"
            android:text="@string/translate_button_text"
            android:textColor="@color/yellow"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>